all module added

--- a/Module-1/structure.html
+++ b/Module-1/structure.html
@@ -3,17 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>boiler-code</title>
+    <link rel="shortcut icon" href="images/2432846.png" type="image/x-icon">
+    <title>my full website</title>
 </head>
 <body>
-    <header>
-
-    </header>
-    <main>
-        <h1 style="color: blue;">my first blog</h1>
-    </main>
-    <footer>
-
-    </footer>
+    
 </body>
 </html>
