--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/17c3571f55.js" crossorigin="anonymous"></script>
 </head>
 <body class="open-sans-normal">
     <header class="header secondary-bg">
@@ -24,8 +25,8 @@
                 <h3 class="banner-greetings dark-2">Hi, I  am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">download cv</button>
-                <button class="btn-primary">contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i>    download cv</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i>   contact</button>
 
             </div>
             <img class="banner-image" src="images/hardy.png" alt="">
@@ -136,7 +137,7 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
                 </div>
             </div>
             <div class="text-center resume-download-cv">
-                <button class="btn-primary">download cv</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i>  download cv</button>
             </div>
          </section>
      
